--- a/css/product.css
+++ b/css/product.css
@@ -1,9 +1,17 @@
 img {
-    padding-top: 9%;
-    width: 70vh;
-    height: 60vh;
-    padding-left: 0;
+    /* padding: 3%; */
+    width: 50vh;
+    height: 50vh;
+    overflow: hidden;
+    padding-top:15px;
 }
+.photo{
+    display: flex;
+    flex-direction:row; 
+border: 3px;
+}
+
+
 nav>a {
     float: center;
     color: black;
