--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,15 @@ h2 {
     text-align: center;
     padding-top: 3%;
     text-decoration: underline;
+    font-family: Unica One;
+}
+input {
+  font-size: 15px;
+  color: white;
+  text-align: center;
+  padding-top: 3%;
+  text-decoration: underline;
+  font-family: Unica One;
 }
 p {
     font-size: 20px;
@@ -46,7 +55,7 @@ section {
     padding-top: 30px
 }
 section#about {
-    padding-bottom: 1000px;
+    padding-bottom: 370px;
 }
 .login-form {
     padding: 250px;
@@ -62,7 +71,7 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
   }
   
-  button {
+  .signupbtn {
     background-color: brown;
     color: white;
     padding: 14px 20px;
@@ -100,15 +109,109 @@ input[type=text], input[type=password] {
     float: right;
     padding-top: 16px;
   }
-  
-  /* Change styles for span and cancel button on extra small screens */
   @media screen and (max-width: 300px) {
-    span.psw {
+    span.psw {body {font-family: Arial, Helvetica, sans-serif;}
+    * {box-sizing: border-box}
+    
+    /* Full-width input fields */
+    input[type=text], input[type=password] {
+      width: 100%;
+      padding: 15px;
+      margin: 5px 0 22px 0;
+      display: inline-block;
+      border: none;
+      background: #f1f1f1;
+    }
+    
+    input[type=text]:focus, input[type=password]:focus {
+      background-color: #ddd;
+      outline: none;
+    }
+    
+    hr {
+      border: 1px solid #f1f1f1;
+      margin-bottom: 25px;
+    }
+    
+    
+    button:hover {
+      opacity:1;
+    }
+    
+    /* Extra styles for the cancel button */
+    .cancelbtn {
+      padding: 14px 20px;
+      background-color: #f44336;
+    }
+    
+    /* Float cancel and signup buttons and add an equal width */
+    .cancelbtn, .signupbtn {
+      float: left;
+      width: 50%;
+    }
+    
+    /* Add padding to container elements */
+    .container {
+      padding: 16px;
+    }
+    
+    /* Clear floats */
+    .clearfix::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+    
+    /* Change styles for cancel button and signup button on extra small screens */
+    @media screen and (max-width: 300px) {
+      .cancelbtn, .signupbtn {
+         width: 100%;
+      }
+    }
+    span.psw{
        display: block;
        float: none;
-    }
+    } 
     .cancelbtn {
        width: 100%;
     }
+  
+  meter {
+    /* Reset the default appearance */
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+  
+    margin: 0 auto 1em;
+    width: 100%;
+    height: 0.5em;
+  
+    /* Applicable only to Firefox */
+    background: none;
+    background-color: rgba(0, 0, 0, 0.1);
   }
   
+  meter::-webkit-meter-bar {
+    background: none;
+    background-color: rgba(0, 0, 0, 0.1);
+  }
+  /* Webkit based browsers */
+meter[value="1"]::-webkit-meter-optimum-value { background: red; }
+meter[value="2"]::-webkit-meter-optimum-value { background: yellow; }
+meter[value="3"]::-webkit-meter-optimum-value { background: orange; }
+meter[value="4"]::-webkit-meter-optimum-value { background: green; }
+
+/* Gecko based browsers */
+meter[value="1"]::-moz-meter-bar { background: red; }
+meter[value="2"]::-moz-meter-bar { background: red; }
+meter[value="3"]::-moz-meter-bar { background: yellow; }
+meter[value="4"]::-moz-meter-bar { background: yellow; }
+meter[value="5"]::-moz-meter-bar { background: orange; }
+meter[value="6"]::-moz-meter-bar { background: orange; }
+meter[value="7"]::-moz-meter-bar { background: orange; }
+meter[value="9"]::-moz-meter-bar { background: green; }
+meter[value="10"]::-moz-meter-bar { background: green; }
+meter[value="11"]::-moz-meter-bar { background: green; }
+meter[value="12"]::-moz-meter-bar { background: green; }
+meter[value="13"]::-moz-meter-bar { background: green; }
+meter[value="14"]::-moz-meter-bar { background: green; }
