--- a/css/styles.css
+++ b/css/styles.css
@@ -206,18 +206,20 @@ input[type=text], input[type=password] {
     background: none;
     background-color: rgba(0, 0, 0, 0.1);
   }
-  
+  /*
   meter::-webkit-meter-bar {
     background: none;
     background-color: rgba(0, 0, 0, 0.1);
   }
   /* Webkit based browsers */
+  /*
 meter[value="1"]::-webkit-meter-optimum-value { background: red; }
 meter[value="2"]::-webkit-meter-optimum-value { background: yellow; }
 meter[value="3"]::-webkit-meter-optimum-value { background: orange; }
 meter[value="4"]::-webkit-meter-optimum-value { background: green; }
 
 /* Gecko based browsers */
+/*
 meter[value="1"]::-moz-meter-bar { background: red; }
 meter[value="2"]::-moz-meter-bar { background: red; }
 meter[value="3"]::-moz-meter-bar { background: yellow; }
@@ -231,3 +233,4 @@ meter[value="11"]::-moz-meter-bar { background: green; }
 meter[value="12"]::-moz-meter-bar { background: green; }
 meter[value="13"]::-moz-meter-bar { background: green; }
 meter[value="14"]::-moz-meter-bar { background: green; }
+*/g
