--- a/css/styles.css
+++ b/css/styles.css
@@ -234,4 +234,4 @@ meter[value="11"]::-moz-meter-bar { background: green; }
 meter[value="12"]::-moz-meter-bar { background: green; }
 meter[value="13"]::-moz-meter-bar { background: green; }
 meter[value="14"]::-moz-meter-bar { background: green; }
-*/g
+*/
